# graphRAG

./: .gitignore  README.md  example.env  pyproject.toml
data/graph_schema/: neo4j_query_table_data_labels_2025-4-6.csv  neo4j_query_table_data_propertyKeys_2025-4-6.csv  neo4j_query_table_data_relationshipTypes_2025-4-6.csv
src/graphRAG/: aura_db_rag_script_v1.py  aura_db_rag_script_v2.py  langchain_rag_script.py  local_rag_script.py  preprocessing.py  rag_script.py
