[project]
name = "graphRAG"
version = "0.1.0"
description = "This is a project to build a simple GraphRAG project with neo4j."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'accelerate==1.5.2',
    'black>=25.1.0',
    'colorama==0.4.6',
    'datasets==3.5.0',
    'python-decouple==3.8',
    'langchain-community>=0.3.19',
    'langchain-core>=0.3.43',
    'langchain-google-community>=2.0.7',
    'langchain-google-genai>=2.0.11',
    'langchain-groq>=0.2.5',
    'langchain-ollama>=0.2.3',
    'langchain-openai>=0.3.8',
    'langchain>=0.3.20',
    'loguru==0.7.3',
    'matplotlib>3.5',
    'neo4j==5.28.1',
    'neo4j-graphrag==1.6.1',
    'ollama==0.4.7',
    'peft==0.15.1',
    'rich>=13.9.4',
    'scikit-learn>=1.6.1',
    'torch>=2.6.0',
    'torchinfo==1.8.0',
    'torchvision>=0.21',
    'transformers==4.51.0'
]

